// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemeInner is high contrast mode enabled: false 1`] = `
<DocumentFragment>
  <mock-bodyclassmodifier
    classnames="theme-switcher"
    deps="[object Object]"
  />
</DocumentFragment>
`;

exports[`ThemeInner is high contrast mode enabled: true 1`] = `
<DocumentFragment>
  <mock-bodyclassmodifier
    classnames="theme-switcher,high-contrast-theme"
    deps="[object Object]"
  />
</DocumentFragment>
`;
